引入了一些bug，顺便把预约模块磨掉了大半

--- a/health_mobile/src/main/webapp/pages/setmeal_detail_18.html
+++ b/health_mobile/src/main/webapp/pages/setmeal_detail_18.html
@@ -170,7 +170,7 @@
                     </ul>
                 </div>
                 <div class="box-button">
-                    <a @click="toOrderInfo()" class="order-btn">立即预约</a>
+                    <a href="orderInfo.html?id=18" class="order-btn">立即预约</a>
                 </div>
             </div>
         </div>
