--- a/health_mobile/src/main/webapp/pages/setmeal_detail_22.html
+++ b/health_mobile/src/main/webapp/pages/setmeal_detail_22.html
@@ -149,7 +149,7 @@
                     </ul>
                 </div>
                 <div class="box-button">
-                    <a @click="toOrderInfo()" class="order-btn">立即预约</a>
+                    <a href="orderInfo.html?id=22" class="order-btn">立即预约</a>
                 </div>
             </div>
         </div>
